--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-lang3-3.12.0.jar=lib\\commons-lang3-3.12.0.jar
+file.reference.jackson-annotations-2.15.2.jar=lib\\jackson-annotations-2.15.2.jar
+file.reference.jackson-core-2.15.2.jar=lib\\jackson-core-2.15.2.jar
+file.reference.jackson-databind-2.15.2.jar=lib\\jackson-databind-2.15.2.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../../PRJ301_Submit/su25/SU25-SE1820-PRJ301/WebApplication11/lib/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../../PRJ301_Submit/su25/SU25-SE1820-PRJ301/WebApplication11/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jbcrypt-0.4.jar=lib\\jbcrypt-0.4.jar
+file.reference.jjwt-0.9.1.jar=lib\\jjwt-0.9.1.jar
 file.reference.sqljdbc4.jar=../../PRJ301_Submit/su25/SU25-SE1820-PRJ301/WebApplication11/lib/sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
@@ -42,7 +48,13 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+    ${file.reference.jackson-annotations-2.15.2.jar}:\
+    ${file.reference.jackson-core-2.15.2.jar}:\
+    ${file.reference.jackson-databind-2.15.2.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${file.reference.jjwt-0.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
